ex4: fix text overflow

--- a/ex4/src/scss/style.scss
+++ b/ex4/src/scss/style.scss
@@ -2,6 +2,7 @@
 @use "base/variables" as v;
 @use "components/button";
 @use "base/fonts";
+@use "base/mixins" as *;
 
 body, button {
   font-family: "Satoshi";
@@ -57,6 +58,12 @@ body, button {
   }
 
   &__title {
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+
+    overflow: hidden;
+    min-width: 0;
     font-size: 24px;
     font-weight: 700;
 
@@ -239,6 +246,7 @@ body, button {
   }
 
   &__name {
+    @include line-clamp(1);
     font-weight: 700;
     font-size: 20px;
     line-height: 1.1; // line-height/font-size = 22/20
@@ -246,13 +254,14 @@ body, button {
   }
 
   &__content {
-    font-weight: 400;
+    @include line-clamp(3);
     line-height: 1.375; // line-height/font-size = 22/16
     color: rgba(0,0,0,0.6);
     margin-bottom: 24px;
   }
 
   &__footer {
+    @include line-clamp(1);
     font-weight: 500;
     line-height: 1.375; // line-height/font-size = 22/16
     color: rgba(0,0,0,0.6);
@@ -261,6 +270,10 @@ body, button {
 
 .other-products {
   position: relative;
+
+  &__item {
+    max-width: 295px;
+  }
 
   &__title {
     font-size: 48px;
@@ -271,7 +284,6 @@ body, button {
 
   &__viewport {
     overflow: hidden;
-    // position: relative;
   }
 
   &__list {
@@ -317,6 +329,7 @@ body, button {
   }
 
   &__title {
+    @include line-clamp(1);
     font-size: 20px;
     font-weight: 700;
     margin-bottom: 10px;
@@ -329,7 +342,6 @@ body, button {
     p {
       padding-top: 3px;
       font-size: 14px;
-      font-weight: 400;
     }
   }
 
